fix: resolved issue with navbar shrinking on mobile devises on scroll

--- a/css/style.css
+++ b/css/style.css
@@ -1038,7 +1038,7 @@ footer {
 		position: fixed;
 		left: 0;
 		top: 0;
-		bottom: -100px;
+		bottom: 0;
 		width: 270px;
 		min-height: 100vh;
 		padding: 56px 0 81px;
